Refine workshop service carousel layout

--- a/pages/registro-taller.html
+++ b/pages/registro-taller.html
@@ -59,7 +59,7 @@
                             ></textarea>
                         </div>
                         <div class="field">
-                            <span class="field-label" id="services-label">Servicios destacados</span>
+                            <span class="field-label" id="services-label">Servicios que ofrece</span>
                             <p class="help-text">Selecciona los servicios que ofreces en tu taller.</p>
                             <div class="service-options" data-service-options>
                                 <button
