Show selected services below the workshop options

--- a/pages/registro-taller.html
+++ b/pages/registro-taller.html
@@ -87,6 +87,13 @@
                                     <span aria-hidden="true">&#10095;</span>
                                 </button>
                             </div>
+                            <div class="selected-services" data-selected-services hidden>
+                                <p class="selected-services__title">Servicios seleccionados</p>
+                                <p class="selected-services__empty" data-selected-services-empty>
+                                    Aún no has seleccionado servicios.
+                                </p>
+                                <div class="selected-services__list" data-selected-services-list></div>
+                            </div>
                         </div>
                         <div class="field">
                             <label for="specialties">Especialidades principales</label>
