--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -16,13 +16,8 @@
   <link rel="stylesheet" href="../Styles/agendar-cita.css" />
   <link rel="stylesheet" href="../Styles/chatbot.css" />
 
-  <!-- ✅ SDK PayPal: UNA sola vez. Puedes cambiar a USD si CLP te da problemas -->
-  <script src="https://www.paypal.com/sdk/js
-  ?client-id=ATK6vMKNkGN9nrBunM83FLJ8_6rR82v28x35yp7YpKHyajQORbwHoAhjpzmZyy9SDpUGQqf4taf0uNhg
-  &currency=USD
-  &locale=es_CL
-  &intent=capture"></script>
-
+  <!-- ✅ SDK PayPal (USD). Deja UNA sola etiqueta -->
+  <script src="https://www.paypal.com/sdk/js?client-id=ATK6vMKNkGN9nrBunM83FLJ8_6rR82v28x35yp7YpKHyajQORbwHoAhjpzmZyy9SDpUGQqf4taf0uNhg&currency=USD&intent=capture&components=buttons"></script>
 </head>
 
 <body>
@@ -204,97 +199,160 @@
   <script src="../src/chatbot.js" defer></script>
   <script src="../src/appointments.js" defer></script>
 
-  <!-- ✅ Inicialización única PayPal (con candado anti-doble) -->
-  <script>
-    (function () {
-      if (window.__MECHAPP_PAYPAL_INIT__) return;         // ⛔ evita doble render
-      window.__MECHAPP_PAYPAL_INIT__ = true;
+  <!-- ✅ Inicialización única PayPal -->
+ <script>
+(function () {
+  if (window.__MECHAPP_PAYPAL_INIT__) return;
+  window.__MECHAPP_PAYPAL_INIT__ = true;
 
-      const SERVICE_PRICES = [
-        { key: /diagn(o|ó)stico el(é|e)ctrico/i, clp: 20000, usd: 20 },
-        { key: /cambio de aceite/i, clp: 15000, usd: 15 },
-        { key: /frenos|suspensi(ó|o)n/i, clp: 35000, usd: 35 },
-        { key: /alineaci(ó|o)n|balanceo/i, clp: 18000, usd: 18 },
-        { key: /mantenimiento preventivo/i, clp: 25000, usd: 25 },
-        { key: /revisi(ó|o)n general/i, clp: 22000, usd: 22 },
-      ];
+  // --- DOM helpers ---
+  const $ = s => document.querySelector(s);
+  const serviceInput    = $('#service');
+  const mechanicSelect  = $('#mechanic-select');
 
-      const sdkSrc = Array.from(document.scripts).map(s => s.src || '').find(u => u.includes('paypal.com/sdk/js'));
-      const sdkCurrency = (sdkSrc && new URL(sdkSrc).searchParams.get('currency')) || 'USD';
+  // FECHA/HORA
+  const visitDateInput  = $('#visit-date');       // hidden del calendario (puede venir vacío)
+  const scheduledFor    = $('#scheduled-for');    // <-- el que suele rellenar appointments.js (ISO)
+  const visitTimeInput  = $('#visit-time');
 
-      const $ = (s) => document.querySelector(s);
-      const serviceInput = $('#service');
-      const mechanicSelect = $('#mechanic-select');
-      const visitDateInput = $('#visit-date');
-      const visitTimeInput = $('#visit-time');
-      const visitTypeRadio = document.querySelectorAll('input[name="visit-type"]');
-      const addressInput = $('#domicile-address');
-      const workshopManual = $('#workshop-manual');
-      const payServiceName = $('#pay-service-name');
-      const payAmountEl = $('#pay-amount');
-      const payErrorEl = $('#pay-error');
+  // LUGAR
+  const visitTypeRadios = document.querySelectorAll('input[name="visit-type"]');
+  const workshopSelect  = $('#workshop-select');  // <-- select de taller sugerido
+  const workshopManual  = $('#workshop-manual');  // texto manual de taller
+  const addressInput    = $('#domicile-address'); // dirección a domicilio
 
-      function currentService() { return (serviceInput?.value || '').trim(); }
-      function priceFor(text) {
-        if (!text) return null;
-        for (const r of SERVICE_PRICES) if (r.key.test(text)) return sdkCurrency === 'CLP' ? r.clp : r.usd;
-        return sdkCurrency === 'CLP' ? 20000 : 20; // default
-      }
-      function fmt(a) {
-        try { return new Intl.NumberFormat(sdkCurrency === 'CLP' ? 'es-CL' : 'en-US', { style: 'currency', currency: sdkCurrency }).format(a); }
-        catch { return (sdkCurrency === 'CLP' ? '$' : 'US$') + a; }
-      }
-      function requiredAddress() {
-        const type = Array.from(visitTypeRadio).find(r => r.checked)?.value || 'presencial';
-        return type === 'domicilio' ? (addressInput?.value || '').trim() : (workshopManual?.value || '').trim();
-      }
-      function formOK() {
-        return !!currentService() && !!mechanicSelect?.value && !!visitDateInput?.value && !!visitTimeInput?.value && !!requiredAddress();
-      }
-      function updatePreview() {
-        const s = currentService(); const amount = priceFor(s);
-        payServiceName.textContent = s || '—';
-        payAmountEl.textContent = amount ? fmt(amount) : '—';
-        payErrorEl.style.display = formOK() ? 'none' : 'block';
-      }
-      ['input', 'change'].forEach(evt => {
-        serviceInput?.addEventListener(evt, updatePreview);
-        mechanicSelect?.addEventListener(evt, updatePreview);
-        visitDateInput?.addEventListener(evt, updatePreview);
-        visitTimeInput?.addEventListener(evt, updatePreview);
-        addressInput?.addEventListener(evt, updatePreview);
-        workshopManual?.addEventListener(evt, updatePreview);
-        visitTypeRadio.forEach(r => r.addEventListener(evt, updatePreview));
-      });
+  // UI resumen
+  const payServiceName  = $('#pay-service-name');
+  const payAmountEl     = $('#pay-amount');
+  const payErrorEl      = $('#pay-error');
+
+  // --- Mapeo precios (USD) ---
+  const PRICE = [
+    { re: /diagn(o|ó)stico el(é|e)ctrico/i, usd: 20 },
+    { re: /cambio de aceite/i,               usd: 15 },
+    { re: /(frenos|suspensi(ó|o)n)/i,        usd: 35 },
+    { re: /(alineaci(ó|o)n|balanceo)/i,      usd: 18 },
+    { re: /mantenimiento preventivo/i,       usd: 25 },
+    { re: /revisi(ó|o)n general/i,           usd: 22 },
+  ];
+
+  function currentService() {
+    return (serviceInput?.value || '').trim();
+  }
+
+  // Dirección requerida según tipo de visita:
+  // - domicilio: #domicile-address
+  // - presencial: #workshop-select (valor) o #workshop-manual (texto)
+  function requiredAddress() {
+    const t = Array.from(visitTypeRadios).find(r => r.checked)?.value || 'presencial';
+    if (t === 'domicilio') {
+      return (addressInput?.value || '').trim();
+    }
+    const sel = (workshopSelect?.value || '').trim();
+    const man = (workshopManual?.value || '').trim();
+    return sel || man;
+  }
+
+  // Fecha válida: usa primero #scheduled-for (ISO), si no, #visit-date (hidden)
+  function hasDate() {
+    return !!((scheduledFor?.value || '').trim() || (visitDateInput?.value || '').trim());
+  }
+
+  function formOK() {
+    const hasService  = !!currentService();
+    const hasMechanic = !!(mechanicSelect && mechanicSelect.value);
+    const hasHour     = !!(visitTimeInput && visitTimeInput.value);
+    const hasAddr     = !!requiredAddress();
+    return hasService && hasMechanic && hasDate() && hasHour && hasAddr;
+  }
+
+  function priceUSD(text) {
+    if (!text) return 25;
+    for (const p of PRICE) if (p.re.test(text)) return p.usd;
+    return 25;
+  }
+
+  function fmtUSD(a) {
+    try { return new Intl.NumberFormat('en-US', { style: 'currency', currency: 'USD' }).format(a); }
+    catch { return 'US$' + a; }
+  }
+
+  function updatePreview() {
+    const s = currentService();
+    const amt = priceUSD(s);
+    payServiceName.textContent = s || '—';
+    payAmountEl.textContent = fmtUSD(amt);
+    payErrorEl.style.display = formOK() ? 'none' : 'block';
+  }
+
+  // Escuchas (incluye select de taller y #scheduled-for)
+  ['input','change'].forEach(evt => {
+    serviceInput?.addEventListener(evt, updatePreview);
+    mechanicSelect?.addEventListener(evt, updatePreview);
+    visitDateInput?.addEventListener(evt, updatePreview);
+    scheduledFor?.addEventListener(evt, updatePreview);  // <-- importante
+    visitTimeInput?.addEventListener(evt, updatePreview);
+    addressInput?.addEventListener(evt, updatePreview);
+    workshopManual?.addEventListener(evt, updatePreview);
+    workshopSelect?.addEventListener(evt, updatePreview); // <-- importante
+    visitTypeRadios.forEach(r => r.addEventListener(evt, updatePreview));
+  });
+  updatePreview();
+
+  if (!window.paypal) {
+    console.error('[PayPal] SDK no cargó');
+    return;
+  }
+
+  paypal.Buttons({
+    style: { layout: 'vertical', color: 'gold', shape: 'rect', label: 'pay', tagline: false },
+
+    onClick: (data, actions) => {
       updatePreview();
+      if (!formOK()) {
+        payErrorEl.style.display = 'block';
+        console.warn('[PayPal] Form incompleto: servicio/mech/fecha/hora/dirección');
+        return actions.reject();
+      }
+      return actions.resolve();
+    },
 
-      if (!window.paypal) { console.error('PayPal SDK no cargó'); return; }
+    createOrder: (data, actions) => {
+      const svc = currentService();
+      let amt = Number(priceUSD(svc));
+      if (!Number.isFinite(amt) || amt <= 0) {
+        console.warn('[PayPal] Monto inválido, usando 25 USD como fallback');
+        amt = 25;
+      }
+      const value = amt.toFixed(2);
+      console.log('[PayPal] createOrder →', { servicio: svc, amountUSD: value });
 
-      paypal.Buttons({
-        style: { layout: 'vertical', color: 'gold' },
+      return actions.order.create({
+        purchase_units: [{
+          amount: { value },
+          description: `Reserva de cita: ${svc || 'Servicio MechApp'}`
+        }]
+      });
+    },
 
-        createOrder: function (data, actions) {
-          return actions.order.create({
-            purchase_units: [{ amount: { value: '25.00' }, description: 'Reserva MechApp' }]
-          });
-        },
+    onApprove: (data, actions) => {
+      console.log('[PayPal] onApprove → orderID', data.orderID);
+      return actions.order.capture().then(details => {
+        console.log('[PayPal] capture OK →', details);
+        alert('✅ Pago realizado por ' + (details?.payer?.name?.given_name || 'cliente'));
+        // Si no tienes confirmacion.html, cámbialo por paginainicio.html o la que quieras
+        window.location.href = 'agendar-cita.html';
+      });
+    },
 
-        onClick: function (data, actions) {
-          // deja que cree la orden y luego redirige
-          return actions.resolve();
-        },
+    onError: (err) => {
+      console.error('[PayPal] ERROR →', err);
+      alert('Ocurrió un problema con PayPal. Revisa la consola para más detalle.');
+    }
+  }).render('#paypal-button-container');
+})();
+</script>
 
-        // redirige en onApprove para evitar popup
-        onApprove: function (data, actions) {
-          // Si quieres capturar en servidor, haz redirect a tu backend con data.orderID
-          return actions.redirect(); // ← fuerza full-page redirect a PayPal
-        },
 
-        onError: function (err) { console.error(err); alert('Error PayPal'); }
-      }).render('#paypal-button-container');
-
-    })();
-  </script>
 </body>
-
 </html>
