Add back navigation to workshop reviews page

--- a/pages/resenas-taller.html
+++ b/pages/resenas-taller.html
@@ -25,8 +25,7 @@
         <span>Mechapp</span>
       </a>
       <nav class="header-actions" aria-label="Acciones de la página">
-        <a class="button ghost" href="./resenas-mecanicos.html">Reseñas destacadas</a>
-        <a class="button" data-create-review href="./redactar-resena.html">Escribir reseña</a>
+        <button class="button ghost" type="button" data-go-back>Volver atrás</button>
       </nav>
     </header>
 
