--- a/pages/registro.html
+++ b/pages/registro.html
@@ -19,7 +19,7 @@
         <main>
             <section class="auth-card" aria-labelledby="register-title">
                 <div class="brand" aria-label="AutoServ">
-                    <div class="brand-icon" aria-hidden="true"></div>
+                    <img src="../assets/logo-oscuro.png" alt="Logo Mechapp" width="90" height="90">
                     <span>Mechapp</span>
                 </div>
 
